Make first links more visible + fix some text informations

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,6 +24,10 @@ html {
   scroll-margin-top: 30px;
 }
 
+.underline-text {
+  text-decoration: underline;
+}
+
 .navbar-toggler {
   border: none;
   color: $water_dark;
